# pictor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md
crates/pictor/: Cargo.toml  README.md  TODO.md
crates/pictor-core/: Cargo.toml  README.md  TODO.md
crates/pictor-core/src/: config.rs  error.rs  lib.rs  quant_fp8.rs  quant_k.rs  quant_k_ext.rs  quant_std.rs  quant_ternary.rs  tensor.rs
crates/pictor-core/tests/: fuzz_gguf.rs  gguf_compat_tests.rs  gguf_edge_cases.rs  gguf_writer_tests.rs  model_card_tests.rs  quant_k_tests.rs  streaming_gguf_tests.rs  tensor_property.rs
crates/pictor-eval/: Cargo.toml  README.md  TODO.md
crates/pictor-eval/benches/: eval_bench.rs
crates/pictor-eval/src/: accuracy.rs  arc.rs  bleu.rs  boolq.rs  bootstrap.rs  calibration.rs  chrf.rs  dataset.rs  error.rs  gsm8k.rs  hellaswag.rs  lib.rs  meteor.rs  mmlu.rs  perplexity.rs  qa.rs  report.rs  rouge.rs  streaming.rs  tests.rs  throughput.rs  truthfulqa.rs  winogrande.rs
crates/pictor-eval/tests/: arc_tests.rs  bleu_tests.rs  boolq_tests.rs  bootstrap_tests.rs  calibration_tests.rs  chrf_tests.rs  gsm8k_tests.rs  hellaswag_tests.rs  meteor_tests.rs  mmlu_tests.rs  property_tests.proptest-regressions  property_tests.rs  qa_tests.rs  rouge_tests.rs  streaming_tests.rs  truthfulqa_tests.rs  winogrande_tests.rs
crates/pictor-image/: Cargo.toml  README.md  TODO.md
crates/pictor-image/src/: blocks.rs  config.rs  cuda_gpu.rs  error.rs  forward.rs  gemm.rs  gpu.rs  lib.rs  math.rs  pipeline.rs  png.rs  session.rs  weights.rs
crates/pictor-image/tests/: dit_attention_bench.rs  parity_gguf.rs  synthetic_gguf.rs  te_gpu_bench.rs
crates/pictor-kernels/: Cargo.toml  README.md  TODO.md  build.rs
crates/pictor-kernels/benches/: kernel_benchmarks.rs
crates/pictor-kernels/examples/: gemv_benchmark.rs
crates/pictor-kernels/src/: aligned.rs  dequant.rs  dequant_fp8.rs  dequant_ternary.rs  dispatch.rs  error.rs  fp8_lut.rs  gemm.rs  gemm_fp8.rs  gemm_ternary.rs  gemv.rs  gemv_fp8.rs  gemv_q2k.rs  gemv_q3k.rs  gemv_q4_0.rs  gemv_q4k.rs  gemv_q5k.rs  gemv_q6k.rs  gemv_q8_0.rs  gemv_q8k.rs  gemv_ternary.rs  lib.rs  packing.rs  parallel.rs  parallel_tiled.rs  prefetch.rs  simd_avx2.rs  simd_avx512.rs  simd_float_ops.rs  simd_fp8_avx2.rs  simd_fp8_avx512.rs  simd_fp8_neon.rs  simd_neon.rs  tiled.rs  traits.rs  tuning.rs  weight_cache.rs
crates/pictor-kernels/tests/: capof8_audit.rs  cross_tier.rs  cuda_tq2_gemv_parity.rs  edge_cases.rs  error_handling.rs  fp8_kernels.rs  fp8_simd_parity.rs  fuzz_kernels.rs  gpu_backend_tests.rs  proptest_kernels.rs  tuning_tests.rs
crates/pictor-model/: Cargo.toml  README.md  TODO.md
crates/pictor-model/examples/: gguf_dump.rs  mlx_image_convert.rs  mlx_image_parity.rs  onnx_convert.rs  onnx_inspect.rs
crates/pictor-model/src/: calibration.rs  checkpoint.rs  chunked_prefill.rs  compression.rs  disk_cache.rs  dynamic_quant.rs  error.rs  export.rs  gguf_loader.rs  gradient.rs  gradient_checkpoint.rs  kv_cache.rs  kv_cache_fp16.rs  kv_cache_quant.rs  lib.rs  lora.rs  lora_trainer.rs  losses.rs  lr_schedulers.rs  model_config_builder.rs  model_merge.rs  model_registry.rs  model_variants.rs  multi_gpu.rs  optimizer.rs  paged_kv_cache.rs  pipeline_parallel.rs  prefix_cache.rs  pruning.rs  quantize.rs  quantize_int8.rs  quantize_ternary.rs  smoothquant.rs  tensor_parallel.rs  weight_tying.rs
crates/pictor-model/tests/: attention_sink_tests.rs  attention_tests.rs  calibration_tests.rs  checkpoint_tests.rs  chunked_prefill_tests.rs  compression_tests.rs  cross_attention_tests.rs  cuda_inference_tests.rs  disk_cache_tests.rs  dynamic_quant_tests.rs  flash_decode_tests.rs  fp8_kv_cache_tests.rs  fp8_linear_tests.rs  gguf_loader_tests.rs  gradient_checkpoint_tests.rs  kv_cache_fp16_test.rs  kv_cache_quant_tests.rs  layer_correctness_tests.rs  layer_tests.rs  losses_tests.rs  lr_scheduler_tests.rs  metal_prefill_q1_parity_tests.rs  metal_prefill_ternary_parity_tests.rs  mod_tests.rs  model_forward.rs  model_merge_tests.rs  multi_gpu_tests.rs  numerical_stability_tests.rs  paged_kv_cache_tests.rs  pruning_tests.rs  q5k_q6k_model_tests.rs  quantization_tests.rs  rope_scaling_tests.rs  smoothquant_fp8_tests.rs  sparse_attention_tests.rs  ternary_integration.rs  weight_tying_tests.rs  yarn_rope_tests.rs
crates/pictor-rag/: Cargo.toml  README.md  TODO.md
crates/pictor-rag/benches/: rag_bench.rs
crates/pictor-rag/src/: advanced_chunker.rs  chunker.rs  code_chunker.rs  distance.rs  embedding.rs  error.rs  lib.rs  metadata_filter.rs  persistence.rs  pipeline.rs  retriever.rs  semantic_chunker.rs  tests.rs  vector_store.rs
crates/pictor-rag/tests/: advanced_chunker_tests.rs  code_chunker_tests.rs  distance_tests.rs  metadata_filter_tests.rs  persistence_tests.rs  property_tests.rs  semantic_chunker_tests.rs
crates/pictor-runtime/: Cargo.toml  README.md  TODO.md
crates/pictor-runtime/assets/: chat.html
crates/pictor-runtime/src/: adaptive_lookahead.rs  adaptive_sampling.rs  admin.rs  api_extensions.rs  api_types.rs  async_engine.rs  auto_tuner.rs  batch_engine.rs  beam_search.rs  builders.rs  circuit_breaker.rs  completions.rs  config.rs  context_manager.rs  continuous_batch.rs  convenience.rs  dedup.rs  distributed.rs  embedding_index.rs  embeddings.rs  engine.rs  engine_pool.rs  error.rs  health.rs  hot_reload.rs  json_schema.rs  kv_cache_policy.rs  lib.rs  memory.rs  metrics.rs  middleware.rs  model_cache.rs  multi_model.rs  native_tokenizer.rs  nbest.rs  ngram_cache.rs  pipeline.rs  prefix_cache_engine.rs  presets.rs  profiler.rs  (+21 more)
crates/pictor-runtime/tests/: adaptive_sampling_tests.rs  admin_tests.rs  api_extensions_tests.rs  auto_tuner_tests.rs  builders_test.rs  circuit_breaker_test.rs  completions_tests.rs  config_tests.rs  constrained_decoding_tests.rs  cross_backend_determinism_tests.rs  cuda_ternary_forward_parity.rs  dedup_tests.rs  distributed_tests.rs  embeddings_tests.rs  engine_controllers_tests.rs  (+26 more)
crates/pictor-serve/: Cargo.toml  README.md  TODO.md
crates/pictor-tokenizer/: Cargo.toml  README.md  TODO.md
(+272 files in other folders)
