[package]
name = "pictor-kernels"
description = "1-bit Q1_0_g128 compute kernels (dequant, GEMV, GEMM) for Pictor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/pictor-kernels"
readme = "README.md"
keywords = ["simd", "1-bit", "kernels", "gemv", "avx2"]
categories = ["science", "algorithms"]

[features]
default = []
simd-avx2 = []
simd-avx512 = []
simd-neon = []
wasm = []
cuda = ["gpu", "scirs2-core/gpu", "scirs2-core/cuda"]
native-cuda = ["gpu", "dep:cudarc"]
native-cuda-11 = ["native-cuda"]
metal = ["gpu", "scirs2-core/gpu", "scirs2-core/metal", "dep:metal", "dep:objc"]
gpu = ["scirs2-core/gpu"]
avx2 = []
neon = []

[dependencies]
pictor-core = { path = "../pictor-core" }
scirs2-core = { version = "0.5.0", default-features = false, features = ["simd", "std"] }
half = { version = "2.7.1", features = ["serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
cudarc = { version = "0.19", features = ["nvrtc", "cuda-version-from-build-system", "fallback-latest"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33.0", optional = true }
objc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"

[[bench]]
name = "kernel_benchmarks"
harness = false

[[example]]
name = "gemv_benchmark"
path = "examples/gemv_benchmark.rs"
required-features = ["metal"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("cargo-clippy"))']