[package]
name = "pictor-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pictor-rag"
description = "Pure Rust RAG pipeline for Pictor"
keywords = ["rag", "retrieval", "llm", "embeddings", "vector-search"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
pictor-core = { workspace = true }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
proptest = "1.11.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "rag_bench"
harness = false
