[package]
name = "pictor-runtime"
description = "Inference runtime, sampling, tokenizer, and server for Pictor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/pictor-runtime"
readme = "README.md"
keywords = ["inference", "runtime", "sampling", "generation", "llm"]
categories = ["science", "algorithms"]

[features]
default = ["server"]
server = ["dep:axum", "dep:tower", "dep:tower-http"]
rag = ["dep:axum", "dep:tower", "dep:tower-http"]
wasm = []
metal = ["pictor-kernels/metal", "pictor-model/metal"]
native-cuda = ["pictor-kernels/native-cuda", "pictor-model/native-cuda"]

[dependencies]
pictor-core = { workspace = true }
pictor-kernels = { workspace = true }
pictor-model = { workspace = true }
pictor-tokenizer = { workspace = true }
thiserror = "2.0.18"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
memmap2 = "0.9.10"
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.11", features = ["cors", "trace"], optional = true }
pictor-rag = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6.0"

[dev-dependencies]
proptest = "1.11.0"
tower = "0.5.3"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
http-body-util = "0.1.3"
half = { version = "2.7.1", features = ["serde"] }
