[package]
name = "pictor-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pictor-serve"
description = "Standalone OpenAI-compatible inference server for Pictor"
categories = ["command-line-utilities", "science"]
readme = "README.md"
keywords = ["llm", "inference", "server", "openai", "bonsai"]

[[bin]]
name = "pictor-serve"
path = "src/main.rs"

[features]
metal = ["pictor-runtime/metal"]
native-cuda = ["pictor-runtime/native-cuda"]

[dependencies]
pictor-core = { workspace = true }
pictor-runtime = { workspace = true, features = ["server"] }
pictor-tokenizer = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "blocking"] }
proptest = "1.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
serde_json = "1.0.150"
