[package]
name = "pictor"
description = "Pure Rust 1-bit LLM inference engine for PrismML Bonsai models — umbrella crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/pictor"
readme = "README.md"
keywords = ["llm", "inference", "gguf", "bonsai", "1-bit"]
categories = ["science", "algorithms", "command-line-utilities"]

[features]
default = []
server = ["pictor-runtime/server"]
rag = ["dep:pictor-rag"]
simd-avx2 = ["pictor-kernels/simd-avx2"]
simd-avx512 = ["pictor-kernels/simd-avx512"]
simd-neon = ["pictor-kernels/simd-neon"]
native-tokenizer = ["dep:pictor-tokenizer"]
eval = ["dep:pictor-eval"]
full = ["server", "rag", "native-tokenizer", "eval"]
wasm = [
    "pictor-core/wasm",
    "pictor-kernels/wasm",
    "pictor-model/wasm",
    "pictor-runtime/wasm",
]

[dependencies]
pictor-core = { workspace = true }
pictor-kernels = { workspace = true }
pictor-model = { workspace = true }
pictor-runtime = { workspace = true, default-features = false }
pictor-rag = { workspace = true, optional = true }
pictor-eval = { workspace = true, optional = true }
pictor-tokenizer = { workspace = true, optional = true }
pictor-serve = { workspace = true, optional = true }
